<resources>
    <string name="app_name">Paws 4 Adoption</string>
    <string name="registar">Registar</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="nome_de_utilizador">Nome de utilizador</string>
    <string name="paws_4_adoption_logo">Paws 4 Adoption Logo</string>
    <string name="type_animal">Tipo de animal</string>
    <string name="name_animal">Nome:</string>
    <string name="size_animal">Porte:</string>
    <string name="todo">TODO</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="insertUsername">Introduza o username</string>
    <string name="insertPassword">Introduza a password</string>
    <string name="login">Login</string>
    <string name="insert_name">Introduza o nome no animal</string>
    <string name="id_chip">Id Chip</string>
    <string name="description">Descrição</string>
    <string name="submit">submit</string>
    <string name="location">Localização</string>
    <string name="date">Data</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="searchAnimal">Pesquisar Animais</string>
    <string name="searchAssociation">Pesquisar Associações</string>
    <string name="myAnimals">Minhas Publicações</string>
    <string name="postWanderingAnimal">Reportar Animal Errante</string>
    <string name="postLostAnimal">Reportar Animal Perdido</string>
    <string name="ndOpen">Abrir</string>
    <string name="ndClose">Fechar</string>
    <string name="home">Home</string>
    <string name="search">Pesquisar</string>
    <string name="report">Reportar</string>
    <string name="user">Utilizador</string>
    <string name="invalidUsername">Username Inválido</string>
    <string name="invalidPassword">Password Inválida</string>
    <string name="logout">Logout</string>
    <string name="internet_connection_down">Sem ligaçao de internet</string>
    <string name="empty" />
    <string name="user_prefix">Utilizador autenticado: </string>
    <string name="org_name">nome organização</string>
    <string name="address">endereço</string>
    <string name="phone">telefone</string>
    <string name="organization_photo">Foto da organização</string>
    <string name="get_animals">Ver Animais para Adoção</string>
    <string name="search_by_district">Pesquisar por distrito</string>
    <string name="continuar">Continuar</string>
    <string name="descriptionimganimal">DescriptionImgAnimal</string>
    <string name="detailsAnimal_name">Nome:</string>
    <string name="detailsAnimal_ChipiId">ChipId:</string>
    <string name="detailsAnimal_nature">Espécie:</string>
    <string name="detailsAnimal_breed">Raça:</string>
    <string name="detailsAnimal_sex">Sexo:</string>
    <string name="detailsAnimal_size">Porte:</string>
    <string name="detailsAnimal_furColor">Cor:</string>
    <string name="detailsAnimal_furLength">Pelo:</string>
    <string name="detailsAnimal_type">Tipo:</string>
    <string name="detailsAnimal_createAt">Postado em:</string>
    <string name="desapearing_date">Data de desaparecimento</string>
    <string name="street">Rua</string>
    <string name="streer">Introduza a rua</string>

    <!--  Spinners prompt message  -->
    <string name="select_specie">Selecione a espécie</string>
    <string name="select_subspecie">Selecione a sub-espécie</string>
    <string name="select_furcolor">Selecione a cor do pêlo</string>
    <string name="select_fur_length">Selecione o comprimento do pêlo</string>
    <string name="prompt_select_size">Selecione o porte</string>
    <string name="prompt_select_district">Selecione o distrito</string>


    <string name="set_location">Obter localização</string>
    <string name="dash">-</string>
    <string name="location_simbol_image">Simbolo da localização</string>
    <string name="upload_picture">Upload Imagem</string>
    <string name="animal_picture">Foto do animal</string>

    <string name="insert_date">Introduza a data</string>
    <string name="insert_street">Introduza a rua</string>
    <string name="insert_city">Introduza a cidade</string>
    <string name="update_missing_animal">Editar Animal Perdido</string>
    <string name="update_found_animal">Editar Animal Perdido</string>
    <string name="prompt_select_furlength">Selecione o tipo de pelagem</string>
    <string name="error_received_message">Erro na mensagem recebida</string>
    <string name="missing_animals">Animais Desaparecidos</string>
    <string name="animais_errantes">Animais Errantes</string>
    <string name="animais_para_ado_o">Animais para Adoção</string>
    <string name="a_minha_lista">A Minha Lista</string>
    <string name="localidade">Localidade</string>
    <string name="extensao">Extensão</string>
    <string name="codigo_postal">Código Postal</string>
    <string name="andar">Andar</string>
    <string name="n_da_porta">N.º da Porta</string>
    <string name="rua">Rua</string>
    <string name="telefone">Telefone</string>
    <string name="nif">NIF</string>
    <string name="apelido">Apelido</string>
    <string name="nome">Nome</string>
    <string name="edit_missing_animal">Editar animal desaparecido</string>
    <string name="publish_missing_animal">Publicar animal desaparecido</string>

    <string name="hint_date_missing_animal">Data do desaparecimento</string>
    <string name="hint_date_found_animal">Data do avistamento</string>

    <string name="publish_found_animal">Publicar animal abandonado</string>
    <string name="edit_found_animal">Editar animal abandonado</string>

    <string name="error_filling_animal">Erro ao preencher animal</string>
    <string name="validate_msg_animal_name">Introduza um nome válido (mínimo 2 letras)</string>
    <string name="validate_msg_animal_chip_id">Introduza um chip id válido (15 dígitos))</string>
    <string name="validate_msg_animal_description">Introduza uma descrição válida (min. 10 caracteres))</string>
    <string name="validate_msg_enter_specie">Selecione uma espécie</string>
    <string name="validate_msg_enter_subspecie">Selecione uma sub espécie</string>
    <string name="validade_animal_enter_size">Selecione o porte</string>
    <string name="validate_msg_enter_sex">Selecione o sexo</string>
    <string name="invalid_date">Data inválida</string>
    <string name="validate_msg_data_cannot_be_future">A data não pode ser superior à atual</string>
    <string name="validate_msg_invalid_street">Introduza uma rua válida (mínimo 2 letras)</string>
    <string name="validate_msg_enter_city">Introduza uma cidade válida (mínimo 2 letras)</string>
    <string name="select_sex">Selecione o sexo</string>
    <string name="prompt_select_fur_color">Selecione a cor da pelagem</string>
    <string name="prompt_select_subspecie">Selecione a sub espécie</string>
    <string name="prompt_select_specie">Selecione a espécie</string>
    <string name="title_adoption_animal">Animal para Adoção</string>
    <string name="title_missing_animal">Animal desaparecido</string>
    <string name="title_found_animal">Animal errante</string>
    <string name="title_details">\"Detalhes \"</string>
    <string name="title_my_animal">\"Meu Animal \"</string>
    <string name="msg_animal_created">Animal criado com sucesso</string>
    <string name="msg_animal_updated">Animal atualizado com sucesso</string>
    <string name="msg_animal_deleted">Animal eliminado com sucesso</string>
    <string name="msg_enter_photo">Introduza uma foto</string>
    <string name="msg_enter_fur_color">Selecione uma côr de pêlo</string>
    <string name="msg_enter_fur_length">Selecione o tamanho do pêlo</string>
    <string name="select_district">Selecione o distrito</string>
    <string name="introduza_a_motiva_o_pela_qual_quer_adotar_este_animal">Introduza a motivação pela qual quer adotar este animal</string>
    <string name="new_adoption_animal">New Adoption Animal</string>
    <string name="new_adoption_animal_desc">Notification channel to aler the user of a new adoption animal available</string>
    <string name="title_main_fragment">Home</string>

</resources>