<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior = "single">

        <item android:title="@string/home"
            android:id="@+id/navHome"/>

        <item android:title="@string/search" >
            <menu >
                <item
                    android:id="@+id/navSearchAnimals"
                    android:title="@string/animais_para_ado_o" />
                <item
                    android:id="@+id/navSearchMissing"
                    android:title="@string/animais_desaparcidos" />
                <item
                    android:id="@+id/navSearchFound"
                    android:title="@string/animais_errantes" />
                <item
                    android:id="@+id/navSearchAssociations"
                    android:title="@string/searchAssociation" />

            </menu>
        </item>

        <item android:title="@string/report" >
            <menu >
                    <item android:title="@string/postWanderingAnimal"
                        android:id="@+id/navPostWanderingAnimal"/>
                    <item android:title="@string/postLostAnimal"
                    android:id="@+id/navPostLostAnimal"/>
                    <item android:title="@string/update_missing_animal"
                        android:id="@+id/navUpdateWanderingAnimal"/>
                    <item android:title="@string/update_missing_animal"
                        android:id="@+id/navUpdateLostAnimal"/>
            </menu>
        </item>

        <item android:title="@string/user" >
            <menu >

                <item android:title="@string/myAnimals"
                    android:id="@+id/navMyAnimals"/>
                <item android:title="@string/login"
                    android:id="@+id/navLogin"/>
            </menu>
        </item>

    </group>

</menu>